Added Golang service

--- a/cart/Dockerfile
+++ b/cart/Dockerfile
@@ -1,4 +1,22 @@
-FROM node:latest
-EXPOSE 8080
-COPY index.js .
-CMD [ "node", "index.js" ]
+
+FROM golang:1.14.2
+
+# Setting the env archs
+ENV GOOS=linux \
+    GOARCH=amd64 \
+    GOBIN=/go/bin
+
+# build directories
+RUN mkdir /cart
+RUN mkdir /go/src/cart
+ADD . /go/src/cart
+WORKDIR /go/src/cart
+EXPOSE 7000
+
+# Go dep!
+RUN go get -u github.com/golang/dep/...
+RUN dep ensure
+
+# Build my cart
+RUN go build -o /cart/main .
+CMD ["/cart/main"]
