--- a/users/package.json
+++ b/users/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@koa/router": "^8.0.2",
+    "amqplib": "^0.5.5",
     "graphql": "^14.6.0",
     "koa": "^2.10.0",
     "koa-bodyparser": "^4.2.1",
@@ -44,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/amqplib": "^0.5.13",
     "@types/jest": "^24.0.22",
     "@types/koa": "^2.11.3",
     "@types/koa-bodyparser": "^4.3.0",
