--- a/users/src/config.json
+++ b/users/src/config.json
@@ -1,4 +1,17 @@
 {
     "port": 3000,
-    "mongoURL" : "mongodb://localhost:27017/dukaan_user"
+    "mongoURL" : "mongodb://localhost:27017/dukaan_user",
+    "rabbitMQ_URL": "amqp://root:admin@localhost:5672/",
+    "exchange" :{
+        "cart": "MICROSERVICE_CART_EXCHANGE",
+        "common": "MICROSERVICE_COMMON_EXCHANGE",
+        "product": "MICROSERVICE_PRODUCT_EXCHANGE",
+        "logistic": "MICROSERVICE_LOGISTIC_EXCHANGE"
+    },
+    "queue" :{
+        "cart": "MICROSERVICE_CART_QUEUE",
+        "common": "MICROSERVICE_COMMON_QUEUE",
+        "product": "MICROSERVICE_PRODUCT_QUEUE",
+        "logistic": "MICROSERVICE_LOGISTIC_QUEUE"
+    }
 }
