--- a/cart/Gopkg.toml
+++ b/cart/Gopkg.toml
@@ -32,3 +32,27 @@
 [[constraint]]
   name = "github.com/gorilla/mux"
   version = "1.7.4"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/streadway/amqp"
+
+[[constraint]]
+  name = "github.com/graphql-go/graphql"
+  version = "0.7.9"
+
+[[constraint]]
+  name = "github.com/jmoiron/sqlx"
+  version = "1.2.0"
+
+[[constraint]]
+  name = "github.com/lib/pq"
+  version = "1.3.0"
+
+[[constraint]]
+  name = "google.golang.org/grpc"
+  version = "1.28.1"
+
+[[constraint]]
+  name = "github.com/golang/protobuf"
+  version = "1.4.0"
